@@ -214,6 +214,12 @@ with an environment variable (@pxref{Environment,,Environment Variables}).
 
 @item -dF
 Delete flag @var{F} from the flags present in the file (@pxref{Flags}).
+When using @code{admin -dl} to unlock a release, you need to specify
+which release  should be unlocked.  For example @code{admin -dla}
+unlocks all releases, while @code{admin -dl2} unlocks only release 2.
+This means that @code{admin -dl} will do nothing, since no release was
+specified.  If all releases are locked, attempting to unlock just one
+release will have no effect.
 
 @item -e@var{xxx}
 Erase the specified user or group from the list of those authorised to
@@ -244,7 +250,7 @@ Initialise the @sc{sccs} file with the contents of the file @var{foo}.
 If no argument is given, read from standard input.  This implies the
 @option{-n} option.
 
-@c XXX: do people actually use this?
+@c XXX: do people actually use -l ?
 @c @item -l@var{rel1},@var{rel2},...
 @c Unlock the specified releases.   If @option{a} is specified as the
 @c release, that denotes ``all releases''.  Untested.
